--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
-        "version": 1,
+        "version": 2,
         "builds" : [
             {
                 "src" : "./index.js",
                 "use" : "@vercel/node"
             }
         ],
-        "router" : [
+        "routes" : [
             {
                 "src" : "./(*)",
                 "dest" : "/"
